# vmap

./: README.md  license.md  pyproject.toml
src/vmap/: cli.py  data.py  model.py  predict.py  utils.py  visualize.py
tests/: P0DTC2.fasta  P0DTC2_viz.html  P0DTC2_vmap_preds.csv  summary.csv
